--- a/application/web/template/page-404.html
+++ b/application/web/template/page-404.html
@@ -13,7 +13,7 @@
     <body>
         <main class="container" style="width:50rem;margin-top:.75rem;margin-bottom:.75rem;">
             <h1>{{ title }} {{ code }}!</h2>
-            <p>{{ message }}</p>
+            <div>{{ message }}</div>
         </main>
     </body>
 </html>
